<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/goToTimeSlotList"
            android:icon="@drawable/ic_icons8_lista_30"
            android:title="@string/navdrawer_time_slot_list" />
        <item
            android:id="@+id/goToInterestsList"
            android:icon="@drawable/ic_icons8_mi_piace_50"
            android:title="@string/navdrawer_interests_list" />
        <item
            android:id="@+id/goToBookedList"
            android:icon="@drawable/ic_icons8_reservation"
            android:title="@string/navdrawer_booked_list" />
        <item
            android:id="@+id/goToShowProfile"
            android:icon="@drawable/ic_icons8_nome_64"
            android:title="@string/navdrawer_show_profile" />

        <item
            android:id="@+id/sign_in_button"
            android:icon="@drawable/ic_baseline_login_50"
            android:title="@string/login" />


        <item
            android:id="@+id/logoutItem"
            android:icon="@drawable/ic_icons8_logout_50"
            android:title="@string/logout" />


    </group>

</menu>

