<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rating_header"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rating"
        android:numStars="5"
        android:isIndicator="false"
        android:layout_margin="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_rating_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minLines="2"
        android:hint="@string/rating_text_hint" />

</LinearLayout>