<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photochat"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/profile_image"
                tools:srcCompat="@drawable/example_profile_pic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/name_chat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="SSSSS"
                    android:textColor="#050505"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/email_chat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/email_chat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="TextView"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_chat" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNoCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/noCredit"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cv"
        tools:layout_editor_absoluteX="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAcceptOrRefuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_or_refuse_proposal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/refuseProposal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/button_to_refuse_the_proposal"
                android:src="@drawable/ic_icons8_rimuovi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/acceptProposal"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/acceptProposal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/button_to_accept_the_proposal"
                android:src="@drawable/ic_icons8_ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/refuseProposal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_gchat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
        app:layout_constraintTop_toBottomOf="@+id/tvNoCredit"
        tools:layout_editor_absoluteX="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/text_gchat_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintBottom_toTopOf="@+id/layout_gchat_chatbox" />

    <RelativeLayout
        android:id="@+id/layout_gchat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/button_gchat_send"
            android:background="@android:color/transparent"
            android:hint="@string/enter_message"
            android:inputType="text"
            android:maxLines="6"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_gchat_send"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/send_message"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:textColor="@color/black" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>