<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="220dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@string/profile_pic"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile_pic_default"
                    tools:ignore="ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/changeImageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="220dp"
                    android:layout_marginTop="150dp"
                    android:contentDescription="@string/select_image_gallery"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                    app:layout_constraintEnd_toEndOf="@+id/profile_pic"
                    app:layout_constraintStart_toStartOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="@+id/profile_pic"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                    tools:ignore="SpeakableTextPresentCheck" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/editTextFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/profile_edit"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/editTextNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/nickname_edit"
                        android:hint="@string/nickname"
                        android:inputType="textNoSuggestions"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TextContrastCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/email_edit"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TextContrastCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/editTextLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/location_edit"
                        android:hint="@string/location"
                        android:inputType="textPostalAddress"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TextContrastCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewSkills"
                    tools:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/description_edit"
                        android:hint="@string/description"
                        android:inputType="textNoSuggestions|textMultiLine"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TextContrastCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toTopOf="@+id/cardViewDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewAddress"
                    tools:layout_editor_absoluteX="0dp">

                    <EditText
                        android:id="@+id/editTextSkills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/skills_edit"
                        android:hint="@string/skills"
                        android:inputType="textAutoCorrect"
                        android:textColor="#F8554A4A"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>